--- a/exam/data/html/exam/tpls/app/exampaper.html
+++ b/exam/data/html/exam/tpls/app/exampaper.html
@@ -109,7 +109,7 @@
 							<img src="app/core/styles/images/icons/Clipboard.png"/>
 							<div class="caption">
 								<p class="text-center">
-									<a class="ajax btn btn-primary" href="index.php?exam-app-exampaper-selectquestions&examid=10" title="tese">tese</a>
+									<a class="ajax btn btn-primary" href="index.php?exam-app-exampaper-selectquestions&examid=14" title="随机测试">随机测试</a>
 								</p>
 							</div>
 						</div>
