--- a/exam/data/html/exam/tpls/app/index.html
+++ b/exam/data/html/exam/tpls/app/index.html
@@ -108,6 +108,16 @@
 							</div>
 						</div>
 					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=10" title="临床">临床</a>
+								</p>
+							</div>
+						</div>
+					</li>
 														</ul>
 			</div>
 		</div>
