--- a/exam/data/html/exam/tpls/master/basic_examrange.html
+++ b/exam/data/html/exam/tpls/master/basic_examrange.html
@@ -127,7 +127,7 @@
 				<div class="control-group">
 					<label for="basicexam_auto" class="control-label">绑定模拟考试试卷：</label>
 					<div class="controls">
-						<textarea id="basicexam_auto" name="args[basicexam][auto]" needle="needle" msg="您必须填写至少一个试卷"></textarea>
+						<textarea id="basicexam_auto" name="args[basicexam][auto]" needle="needle" msg="您必须填写至少一个试卷">10</textarea>
 						<span class="help-block">请在试卷管理处查看试卷ID，将数字ID填写在这里，多个请用英文逗号（,）隔开。留空或填0时将无法进行该项考试。</span>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 				<div class="control-group">
 					<label for="basicexam_self" class="control-label">绑定正式考试试卷：</label>
 					<div class="controls">
-						<textarea id="basicexam_self" name="args[basicexam][self]" needle="needle" msg="您必须填写至少一个试卷"></textarea>
+						<textarea id="basicexam_self" name="args[basicexam][self]" needle="needle" msg="您必须填写至少一个试卷">10</textarea>
 						<span class="help-block">请在试卷管理处查看试卷ID，将数字ID填写在这里，多个请用英文逗号（,）隔开。留空或填0时将无法进行该项考试。</span>
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 				<div class="control-group">
 					<label class="control-label">正式考试开启时间：</label>
 					<div class="controls">
-						<input name="args[basicexam][opentime][start]" type="text" value="0" needle="needle" msg="您必须输入一个开启时间起点" /> - <input name="args[basicexam][opentime][end]" type="text" value="0" needle="needle" msg="您必须输入一个开启时间终点" />
+						<input name="args[basicexam][opentime][start]" type="text" value="2015-06-08 11:25:00" needle="needle" msg="您必须输入一个开启时间起点" /> - <input name="args[basicexam][opentime][end]" type="text" value="2015-06-08 16:25:00" needle="needle" msg="您必须输入一个开启时间终点" />
 						<span class="help-block">开始结束时间均需填写，格式为2014-05-01 08:00:00，不限制开启时间请任意一项填写0</span>
 					</div>
 				</div>
