--- a/exam/data/html/exam/tpls/master/exams.html
+++ b/exam/data/html/exam/tpls/master/exams.html
@@ -101,6 +101,46 @@
 	            <tbody>
                     			        <tr>
 						<td>
+							14						</td>
+						<td>
+							随机测试						</td>
+						<td>
+							hongmomanu						</td>
+						<td>
+							随机组卷						</td>
+						<td>
+							2015-06-08						</td>
+						<td>
+							临床						</td>
+						<td>
+							<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-exams-modify&page=&examid=14" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn confirm" href="index.php?exam-master-exams-del&page=&examid=14" title="删除"><em class="icon-remove"></em></a>
+	                    	</div>
+						</td>
+			        </tr>
+			        			        <tr>
+						<td>
+							13						</td>
+						<td>
+							综合能力测试						</td>
+						<td>
+							hongmomanu						</td>
+						<td>
+							手工组卷						</td>
+						<td>
+							2015-06-08						</td>
+						<td>
+							临床						</td>
+						<td>
+							<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-exams-modify&page=&examid=13" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn confirm" href="index.php?exam-master-exams-del&page=&examid=13" title="删除"><em class="icon-remove"></em></a>
+	                    	</div>
+						</td>
+			        </tr>
+			        			        <tr>
+						<td>
 							10						</td>
 						<td>
 							tese						</td>
