--- a/exam/data/html/exam/tpls/master/exams_auto.html
+++ b/exam/data/html/exam/tpls/master/exams_auto.html
@@ -122,6 +122,19 @@
 				</div>
 				
 				<div class="control-group">
+					<label class="control-label" for="content">问答题：</label>
+					<div class="controls">
+						<span class="info">共&nbsp;</span>
+						<input id="iselectallnumber_7" type="text" class="input-mini" needle="needle" name="args[examsetting][questype][7][number]" value="" size="2" msg="您必须填写总题数"/>
+						<span class="info">&nbsp;题，每题&nbsp;</span><input class="input-mini" needle="needle" type="text" name="args[examsetting][questype][7][score]" value="" size="2" msg="您必须填写每题的分值"/>
+						<span class="info">&nbsp;分，描述&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][7][describe]" value="" size="12"/>
+						<span class="info">&nbsp;难度题数：易&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][7][easynumber]" value="0" size="2" msg="您需要填写简单题的数量，最小为0"/>
+  						<span class="info">&nbsp;中&nbsp;</span><input class="input-mini" type="text" needle="needle" name="args[examsetting][questype][7][middlenumber]" value="0" size="2" msg="您需要填写中等难度题的数量，最小为0"/>
+  						<span class="info">&nbsp;难&nbsp;</span><input class="input-mini" type="text" needle="needle" name="args[examsetting][questype][7][hardnumber]" value="0" size="2" datatype="number" msg="您需要填写难题的数量，最小为0"/>
+					</div>
+				</div>
+				
+				<div class="control-group">
 					<div class="controls">
 						<button class="btn btn-primary" type="submit">提交</button>
 						<input type="hidden" name="submitsetting" value="1"/>
