--- a/exam/data/html/exam/tpls/master/questionrows.html
+++ b/exam/data/html/exam/tpls/master/questionrows.html
@@ -111,6 +111,7 @@
 							<select name="search[questiontype]" class="input-medium">
 						  		<option value="0">类型不限</option>
 						  								  		<option value="1">单选题</option>
+						  								  		<option value="7">问答题</option>
 						  							  		</select>
 						</td>
 						<td>
@@ -157,7 +158,7 @@
 								<td>
 									单选题								</td>
 								<td>
-									<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-rowsquestions-detail&questionid=2&1433732747" data-target="#modal">的沙发东方四大发送</a>
+									<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-rowsquestions-detail&questionid=2&1433750637" data-target="#modal">的沙发东方四大发送</a>
 								</td>
 								<td>
 									peadmin								</td>
