--- a/exam/data/html/exam/tpls/master/questions.html
+++ b/exam/data/html/exam/tpls/master/questions.html
@@ -122,6 +122,7 @@
 							<select name="search[questiontype]" class="input-medium">
 						  		<option value="0">类型不限</option>
 						  								  		<option value="1">单选题</option>
+						  								  		<option value="7">问答题</option>
 						  							  		</select>
 						</td>
 						<td>
@@ -162,6 +163,28 @@
 			            </thead>
 			            <tbody>
 		                    					        <tr>
+								<td><input type="checkbox" name="delids[46]" value="1"></td>
+								<td>
+									46								</td>
+								<td>
+									问答题								</td>
+								<td>
+									<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=46" data-target="#modal">请问五行是指哪五行?</a>
+								</td>
+								<td>
+									hongmomanu								</td>
+								<td>
+									2015-06-08								</td>
+								<td>
+									难								</td>
+								<td>
+									<div class="btn-group">
+			                    		<a class="btn" href="index.php?exam-master-questions-modifyquestion&page=&questionid=46" title="修改"><em class="icon-edit"></em></a>
+										<a class="btn confirm" href="index.php?exam-master-questions-delquestion&questionparent=0&page=&questionid=46" title="删除"><em class="icon-remove"></em></a>
+			                    	</div>
+								</td>
+					        </tr>
+					        					        <tr>
 								<td><input type="checkbox" name="delids[45]" value="1"></td>
 								<td>
 									45								</td>
