--- a/exam/data/html/exam/tpls/app/exampaper_paper.html
+++ b/exam/data/html/exam/tpls/app/exampaper_paper.html
@@ -92,49 +92,10 @@
 						<a href="index.php?exam-app-exampaper">模拟考试</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						tese					</li>
+						随机测试					</li>
 				</ul>
-				<h3 class="text-center">tese</h3>
-																				<div id="panel-type1" class="tab-pane active">
-					<ul class="breadcrumb">
-						<li>
-							<h5>1、单选题</h5>
-						</li>
-					</ul>
-						                	                	                <div id="question_2" class="paperexamcontent">
-						<div class="media well">
-							<ul class="nav nav-tabs">
-								<li class="active">
-									<span class="badge badge-info questionindex">1</span></a>
-								</li>
-								<li class="btn-group pull-right">
-									<button class="btn" type="button" onclick="javascript:signQuestion('2',this);"><em class="icon-star-empty" title="标注"></em></button>
-									<button class="btn" type="button" onclick="javascript:favorquestion('2');"><em class="icon-heart" title="收藏"></em></button>
-								</li>
-							</ul>
-							<div class="media-body well text-warning">
-								<a name="question_2"></a><p>对甲状腺肿瘤性质诊断正确率可达80%以上的检查方法是</p>							</div>
-														<div class="media-body well">
-		                    	<p>A.B超</p>
-
-<p>B.CT</p>
-
-<p>C.核素扫描</p>
-
-<p>D.磁共振</p>
-
-<p>E.针吸涂片细胞学检查</p>		                    </div>
-							<div class="media-body well">
-		                    				                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="A" />A </label>
-			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="B" />B </label>
-			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="C" />C </label>
-			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="D" />D </label>
-			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="E" />E </label>
-			                        			                        			                        		                        		                    </div>
-													</div>
-					</div>
-														</div>
-												<div aria-hidden="true" id="submodal" class="modal hide fade" role="dialog" aria-labelledby="#mySubModalLabel">
+				<h3 class="text-center">随机测试</h3>
+																												<div aria-hidden="true" id="submodal" class="modal hide fade" role="dialog" aria-labelledby="#mySubModalLabel">
 					<div class="modal-header">
 						<button aria-hidden="true" class="close" type="button" data-dismiss="modal">×</button>
 						<h3 id="mySubModalLabel">
@@ -162,13 +123,7 @@
 		</h3>
 	</div>
 	<div class="modal-body" id="modal-body" style="max-height:100%;">
-		    	    	                <dl class="clear">
-        	<dt class="float_l"><b>1、单选题</b></dt>
-            <dd>
-            	                                            	<a id="sign_2" href="#question_2" rel="0" class="badge questionindex">1</a>
-            	            	            </dd>
-        </dl>
-                	</div>
+		    	    	            	        	</div>
 	<div class="modal-footer">
 		 <button aria-hidden="true" class="btn" data-dismiss="modal">隐藏</button>
 	</div>
@@ -188,7 +143,7 @@
 			</div>
 			<div class="span6">
 				<ul class="unstyled">
-					<li><h6>已做 <span class="yesdonumber">0</span> 题 共 <span class="allquestionnumber">50</span> 题 总分：<span class="orange">4</span>分 合格分数线：<span class="orange">2</span>分 考试时间：<span class="orange">60</span>分钟</h6></li>
+					<li><h6>已做 <span class="yesdonumber">0</span> 题 共 <span class="allquestionnumber">50</span> 题 总分：<span class="orange">100</span>分 合格分数线：<span class="orange">100</span>分 考试时间：<span class="orange">60</span>分钟</h6></li>
 				</ul>
 			</div>
 			<div class="span2">
