--- a/exam/data/html/exam/tpls/app/exampaper_paper.html
+++ b/exam/data/html/exam/tpls/app/exampaper_paper.html
@@ -95,10 +95,60 @@
 						121					</li>
 				</ul>
 				<h3 class="text-center">121</h3>
-																												<div id="panel-type7" class="tab-pane">
+																				<div id="panel-type1" class="tab-pane active">
 					<ul class="breadcrumb">
 						<li>
-							<h5>1、问答题</h5>
+							<h5>1、单选题</h5>
+						</li>
+					</ul>
+						                	                	                <div id="question_2" class="paperexamcontent">
+						<div class="media well">
+							<ul class="nav nav-tabs">
+								<li class="active">
+									<span class="badge badge-info questionindex">1</span></a>
+								</li>
+								<li class="btn-group pull-right">
+									<button class="btn" type="button" onclick="javascript:signQuestion('2',this);"><em class="icon-star-empty" title="标注"></em></button>
+									<button class="btn" type="button" onclick="javascript:favorquestion('2');"><em class="icon-heart" title="收藏"></em></button>
+								</li>
+							</ul>
+							<div class="media-body well text-warning">
+								<a name="question_2"></a><p>对甲状腺肿瘤性质诊断正确率可达80%以上的检查方法是</p>							</div>
+														<div class="media-body well">
+		                    	<p>A.B超</p>
+
+<p>B.CT</p>
+
+<p>C.核素扫描</p>
+
+<p>D.磁共振</p>
+
+<p>E.针吸涂片细胞学检查</p>		                    </div>
+							<div class="media-body well">
+		                    				                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="A" />A </label>
+			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="B" />B </label>
+			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="C" />C </label>
+			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="D" />D </label>
+			                        			                        			                        <label class="radio inline"><input type="radio" name="question[2]" rel="2" value="E" />E </label>
+			                        			                        			                        		                        		                    </div>
+													</div>
+					</div>
+											                	                <div id="questionrow_2">
+						<div class="media well">
+							<ul class="nav nav-tabs">
+								<li class="active">
+									<span class="badge badge-info questionindex">2</span>
+								</li>
+							</ul>
+							<div class="media-body well">
+								<p>的沙发东方四大发送</p>							</div>
+													</div>
+					</div>
+									</div>
+																				<div id="panel-type7" class="tab-pane">
+					<ul class="breadcrumb">
+						<li>
+							<h5>2、问答题</h5>
 						</li>
 					</ul>
 						                	                	                <div id="question_46" class="paperexamcontent">
@@ -148,8 +198,14 @@
 		</h3>
 	</div>
 	<div class="modal-body" id="modal-body" style="max-height:100%;">
-		    	    	            	                <dl class="clear">
-        	<dt class="float_l"><b>1、问答题</b></dt>
+		    	    	                <dl class="clear">
+        	<dt class="float_l"><b>1、单选题</b></dt>
+            <dd>
+            	                                            	<a id="sign_2" href="#question_2" rel="0" class="badge questionindex">1</a>
+            	            	                                                            </dd>
+        </dl>
+                    	                <dl class="clear">
+        	<dt class="float_l"><b>2、问答题</b></dt>
             <dd>
             	                                            	<a id="sign_46" href="#question_46" rel="0" class="badge questionindex">1</a>
             	            	            </dd>
