--- a/exam/data/html/exam/tpls/app/history.html
+++ b/exam/data/html/exam/tpls/app/history.html
@@ -92,17 +92,17 @@
 					</li>
 				</ul>
 				<ul class="nav nav-tabs">
-					<li class="active">
+					<li>
 						<a href="index.php?exam-app-history">强化训练</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="index.php?exam-app-history&ehtype=1">模拟考试</a>
 					</li>
 					<li>
 						<a href="index.php?exam-app-history&ehtype=2">正式考试</a>
 					</li>
 				</ul>
-								<p><span class="text-warning">提示：</span>我的错题中的强化训练最多记录最新20条信息。</p>
+								<p>您一共完成了<b class="text-warning">2</b>次考试， 平均分为：<b class="text-warning">50</b>分 继续努力吧！</p>
 								<table class="table table-bordered table-hover">
 					<tr class="info">
 						<td>答题记录</td>
@@ -115,7 +115,33 @@
 						<td>重做试卷</td>
 						<td>删除记录</td>
 					</tr>
-									</table>
+										<tr>
+						<td>121</td>
+						<td>2015-06-09</td>
+						<td>60分钟</td>
+                        <td><b class="red">100.00</b></td>
+						<td><b class="red">0</b></td>
+						<td><a href="index.php?exam-app-record-wrongs&ehid=18">查看错题</a></td>
+						<td><a href="index.php?exam-app-history-view&ehid=18">试题解析</a></td>
+						<td><a class="ajax" href="index.php?exam-app-history-redo&ehid=18">重做试卷</a></td>
+						<td>
+														<a href="javascript:;" onclick="javascript:delhistory(18)">删除</a>
+													</td>
+					</tr>
+									<tr>
+						<td>tese</td>
+						<td>2015-06-08</td>
+						<td>60分钟</td>
+                        <td><b class="red">0.00</b></td>
+						<td><b class="red">1</b></td>
+						<td><a href="index.php?exam-app-record-wrongs&ehid=16">查看错题</a></td>
+						<td><a href="index.php?exam-app-history-view&ehid=16">试题解析</a></td>
+						<td><a class="ajax" href="index.php?exam-app-history-redo&ehid=16">重做试卷</a></td>
+						<td>
+														<a href="javascript:;" onclick="javascript:delhistory(16)">删除</a>
+													</td>
+					</tr>
+								</table>
 	            			</div>
 		</div>
 	</div>
