--- a/exam/data/html/exam/tpls/master/basic_examrange.html
+++ b/exam/data/html/exam/tpls/master/basic_examrange.html
@@ -119,7 +119,7 @@
 				    </label>
 				    <div class="controls" style="text-indent:10px;">
 				    	
-				    	<label class="checkbox inline"><input type="checkbox" value="20" name="args[basicknows][6][20]" />培训</label>
+				    	<label class="checkbox inline"><input type="checkbox" value="20" name="args[basicknows][6][20]" checked/>培训</label>
 				    	
 				    </div>
 				</div>
