--- a/exam/data/html/exam/tpls/master/basic_modifypoint.html
+++ b/exam/data/html/exam/tpls/master/basic_modifypoint.html
@@ -52,13 +52,13 @@
 				<div class="control-group">
 					<label class="control-label" for="knows">知识点名称：</label>
 					<div class="controls">
-						<input id="knows" name="args[knows]" type="text" size="30" value="知识点1" needle="needle" alt="请输入知识点名称"/>
+						<input id="knows" name="args[knows]" type="text" size="30" value="中医" needle="needle" alt="请输入知识点名称"/>
 					</div>
 				</div>
 				<div class="control-group">
 				  	<div class="controls">
 					  	<button class="btn btn-primary" type="submit">提交</button>
-						<input type="hidden" name="knowsid" value="19"/>
+						<input type="hidden" name="knowsid" value="23"/>
 						<input type="hidden" name="page" value=""/>
 						<input type="hidden" name="modifypoint" value="1"/>
 					</div>
