--- a/exam/data/html/exam/tpls/app/scores.html
+++ b/exam/data/html/exam/tpls/app/scores.html
@@ -85,7 +85,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">临床</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">我的考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
 						成绩单
@@ -96,7 +96,7 @@
 						<a href="#">成绩单</a>
 					</li>
 				</ul>
-				<p>您的最高分：<span class="text-warning">0</span> 您的最好名次：<span class="text-warning">2</span></p>
+				<p>您的最高分：<span class="text-warning">2.00</span> 您的最好名次：<span class="text-warning">1</span></p>
 				<table class="table table-bordered table-hover">
 					<tr class="info">
 						<td>名次</td>
@@ -106,15 +106,9 @@
 					</tr>
 										<tr>
 						<td>1</td>
-						<td></td>
-						<td>10.00</td>
-						<td>2014-09-12 10:39:11</td>
-					</tr>
-									<tr>
-						<td>2</td>
-						<td>xiaowang4</td>
-						<td>0.00</td>
-						<td>2014-09-11 11:32:56</td>
+						<td>hongmomanu</td>
+						<td>2.00</td>
+						<td>2015-06-08 11:35:59</td>
 					</tr>
 								</table>
 				<div class="pagination pagination-right">
